fix read message functionality and align to right

--- a/app/assets/stylesheets/_messages_style.scss
+++ b/app/assets/stylesheets/_messages_style.scss
@@ -25,6 +25,11 @@
           float: left;
         }
 
+        .readers {
+          text-align: right;
+          padding: 3px;
+        }
+
         .timestamp {
           text-align: right;
         }
